--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,303 +9,53 @@ on:
 jobs:
   test:
     runs-on: ubuntu-22.04
+    env:
+      TOXENV: flake8
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
+    - uses: actions/setup-python@v5.0.0
       with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
+        python-version: 3.8
+    - run: pip install tox
+    - run: pip install codecov
     - run: tox
-    strategy:
-      matrix: {}
-#       # 'allow_failures' transformations are currently unsupported.
+    - run: codecov
+      if: "${{ success() }}"
   test_2:
     runs-on: ubuntu-22.04
     env:
-      DJANGO: '2.2'
+      TOXENV: black
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
+        python-version: 3.8
+    - run: pip install tox
+    - run: pip install codecov
     - run: tox
+    - run: codecov
+      if: "${{ success() }}"
   test_3:
     runs-on: ubuntu-22.04
     env:
-      DJANGO: '2.2'
+      TOXENV: elasticsearch
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_4:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: '2.2'
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_5:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: '2.2'
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_6:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: '2.2'
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
+    - run: docker pull elasticsearch:7.3.2
+    - run: docker run --name elasticsearch -e "discovery.type=single-node" -p 9200:9200 -d elasticsearch:7.3.2
+    - run: docker ps
+    - run: sleep 60
+    - run: pip install tox
+    - run: pip install codecov
     - run: tox
-  test_7:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: '3.0'
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_8:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: '3.0'
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_9:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: '3.0'
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_10:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: '3.0'
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_11:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: main
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_12:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: main
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_13:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: main
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_14:
-    runs-on: ubuntu-22.04
-    env:
-      DJANGO: main
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_15:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: docs
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
-  test_16:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: quality
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: travis_retry pip install tox tox-travis
-    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
+    services:
+#       # This item has no matching transformer
+#       docker:
