--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,40 +3,25 @@ on:
   push:
     branches:
     - "**/*"
-    - "!/^dependabot/.*/"
   pull_request:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install -r requirements.txt
-    - run: ci/travis.sh
+    - run: "./scripts/install_radare2.sh"
+    - run: pip install -r python/requirements_ci.txt
+    - run: cd python && ./setup.py install
+    - run: cd test && make tests
     strategy:
       matrix:
         python:
         - '3.8'
         - '3.8'
         - '3.8'
-        - '3.8'
-        - '3.8'
-        - pypy
-        - pypy-3.6
-  test_2:
-    runs-on: ubuntu-22.04
-    env:
-      OLD_CRYPTOGRAPHY: 3.8.1
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.8'
-    - run: pip install -r requirements.txt
-    - run: ci/travis.sh
