--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,51 +14,72 @@ jobs:
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.8
-    - run: pip install -U setuptools>=39.2.0
-    - run: python setup.py develop
-    - run: python setup.py test
-  test_2:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: pip install -U setuptools>=39.2.0
-    - run: python setup.py develop
-    - run: python setup.py test
-  test_3:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: pip install -U setuptools>=39.2.0
-    - run: python setup.py develop
-    - run: python setup.py test
-  test_4:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.9
-    - run: pip install -U setuptools>=39.2.0
-    - run: python setup.py develop
-    - run: python setup.py test
-  test_5:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: pypy-3.6
-    - run: pip install -U setuptools>=39.2.0
-    - run: python setup.py develop
-    - run: python setup.py test
+        python-version: "${{ matrix.python }}"
+    - run: pip install coveralls coverage
+    - run: pip install $DJANGO
+    - run: coverage run runtests.py
+    - run: coverage report -m
+    - run: coverage combine
+    - run: coveralls
+    strategy:
+      matrix:
+        DJANGO:
+        - Django>=1.4,<1.5
+        - Django>=1.5,<1.6
+        - Django>=1.6,<1.7
+        - Django>=1.7,<1.8
+        - Django>=1.8,<1.9
+        - Django>=1.9,<1.10
+        - Django>=1.10,<1.11
+        - Django>=1.11,<2.0
+        - https://github.com/django/django/archive/main.tar.gz
+        python:
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        - '3.8'
+        exclude:
+        - DJANGO: Django>=1.7,<1.8
+          python: '3.8'
+        - DJANGO: Django>=1.8,<1.9
+          python: '3.8'
+        - DJANGO: Django>=1.9,<1.10
+          python: '3.8'
+        - DJANGO: Django>=1.10,<1.11
+          python: '3.8'
+        - DJANGO: Django>=1.11,<2.0
+          python: '3.8'
+        - DJANGO: https://github.com/django/django/archive/main.tar.gz
+          python: '3.8'
+        - DJANGO: https://github.com/django/django/archive/main.tar.gz
+          python: '3.8'
+        - DJANGO: Django>=1.4,<1.5
+          python: '3.8'
+        - DJANGO: https://github.com/django/django/archive/main.tar.gz
+          python: '3.8'
+        - DJANGO: Django>=1.4,<1.5
+          python: '3.8'
+        - DJANGO: Django>=1.5,<1.6
+          python: '3.8'
+        - DJANGO: Django>=1.6,<1.7
+          python: '3.8'
+        - DJANGO: Django>=1.7,<1.8
+          python: '3.8'
+        - DJANGO: Django>=1.4,<1.5
+          python: '3.8'
+        - DJANGO: Django>=1.5,<1.6
+          python: '3.8'
+        - DJANGO: Django>=1.6,<1.7
+          python: '3.8'
+        - DJANGO: Django>=1.7,<1.8
+          python: '3.8'
+        - DJANGO: Django>=1.8,<1.9
+          python: '3.8'
+        - DJANGO: Django>=1.9,<1.10
+          python: '3.8'
+        - DJANGO: Django>=1.10,<1.11
+          python: '3.8'
+#       # 'allow_failures' transformations are currently unsupported.
+    env:
+      DJANGO: "${{ matrix.DJANGO }}"
