--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,78 +8,26 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install coveralls coverage
-    - run: pip install $DJANGO
-    - run: coverage run runtests.py
-    - run: coverage report -m
-    - run: coverage combine
-    - run: coveralls
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - run: mkdir -p /home/travis/config
+    - run: pip install -r requirements.txt
+    - run: python FeedCrawler.py --port=9090 --config="/home/runner/work/_temp/_github_home" --test_run --log-level=DEBUG
     strategy:
       matrix:
-        DJANGO:
-        - Django>=1.4,<1.5
-        - Django>=1.5,<1.6
-        - Django>=1.6,<1.7
-        - Django>=1.7,<1.8
-        - Django>=1.8,<1.9
-        - Django>=1.9,<1.10
-        - Django>=1.10,<1.11
-        - Django>=1.11,<2.0
-        - https://github.com/django/django/archive/main.tar.gz
         python:
         - '3.8'
         - '3.8'
         - '3.8'
-        - '3.8'
-        - '3.8'
-        exclude:
-        - DJANGO: Django>=1.7,<1.8
-          python: '3.8'
-        - DJANGO: Django>=1.8,<1.9
-          python: '3.8'
-        - DJANGO: Django>=1.9,<1.10
-          python: '3.8'
-        - DJANGO: Django>=1.10,<1.11
-          python: '3.8'
-        - DJANGO: Django>=1.11,<2.0
-          python: '3.8'
-        - DJANGO: https://github.com/django/django/archive/main.tar.gz
-          python: '3.8'
-        - DJANGO: https://github.com/django/django/archive/main.tar.gz
-          python: '3.8'
-        - DJANGO: Django>=1.4,<1.5
-          python: '3.8'
-        - DJANGO: https://github.com/django/django/archive/main.tar.gz
-          python: '3.8'
-        - DJANGO: Django>=1.4,<1.5
-          python: '3.8'
-        - DJANGO: Django>=1.5,<1.6
-          python: '3.8'
-        - DJANGO: Django>=1.6,<1.7
-          python: '3.8'
-        - DJANGO: Django>=1.7,<1.8
-          python: '3.8'
-        - DJANGO: Django>=1.4,<1.5
-          python: '3.8'
-        - DJANGO: Django>=1.5,<1.6
-          python: '3.8'
-        - DJANGO: Django>=1.6,<1.7
-          python: '3.8'
-        - DJANGO: Django>=1.7,<1.8
-          python: '3.8'
-        - DJANGO: Django>=1.8,<1.9
-          python: '3.8'
-        - DJANGO: Django>=1.9,<1.10
-          python: '3.8'
-        - DJANGO: Django>=1.10,<1.11
-          python: '3.8'
-#       # 'allow_failures' transformations are currently unsupported.
-    env:
-      DJANGO: "${{ matrix.DJANGO }}"
+        - '3.9'
