--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,22 +15,18 @@ jobs:
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: "${{ matrix.python }}"
-    - run: pip install --requirement dev-requirements.txt
-    - run: if [[ $TRAVIS_PYTHON_VERSION == 3.8 ]]; then pre-commit run --all-files; fi
-    - run: python setup.py develop
-    - run: pytest --verbose
-    - run: python setup.py bdist_wheel
-    - run: python setup.py install
-    - run: pygount --version
-    - run: pygount --help
-    - run: pygount pygount *.cfg *.yaml
-    - run: pygount --format=summary pygount *.cfg *.yaml
-    - run: if [[ $TRAVIS_PYTHON_VERSION == 3.8 ]]; then coveralls; fi
-      if: "${{ success() }}"
+    - run: pip install -q Django==$DJANGO_VERSION
+    - run: pip install -e .[flake8,tests]
+    - run: flake8
+    - run: pytest
     strategy:
       matrix:
+        DJANGO_VERSION:
+        - '1.11'
         python:
-        - '3.8'
-        - '3.8'
-        - '3.8'
-        - '3.8'
+        - 3.8
+        - 3.8
+        - 3.8
+        - 3.8
+    env:
+      DJANGO_VERSION: "${{ matrix.DJANGO_VERSION }}"
