--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,24 +7,101 @@ on:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
 jobs:
-  test:
-    runs-on: ubuntu-22.04
+  Python_3.8:
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: "${{ matrix.python }}"
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install -r dev-requirements.txt
-    - run: flake8 sendgrid_backend/
-    - run: isort -c ./
-    - run: black --check ./
-    - run: mypy sendgrid_backend/
-    - run: tox
-    strategy:
-      matrix:
-        python:
-        - 3.8
-        - 3.8
-        - 3.8
+        python-version: 3.8
+    - run: pip install -e .
+    - run: cd tests
+    - run: python test_cvss2.py
+    - run: python test_cvss3.py
+#     # This item has no matching transformer
+#     - email: false
+  Python_3.8:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install -e .
+    - run: cd tests
+    - run: python test_cvss2.py
+    - run: python test_cvss3.py
+#     # This item has no matching transformer
+#     - email: false
+  Python_3.8:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install -e .
+    - run: cd tests
+    - run: python test_cvss2.py
+    - run: python test_cvss3.py
+#     # This item has no matching transformer
+#     - email: false
+  Python_3.8:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install -e .
+    - run: cd tests
+    - run: python test_cvss2.py
+    - run: python test_cvss3.py
+#     # This item has no matching transformer
+#     - email: false
+  Python_3.8:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install -e .
+    - run: cd tests
+    - run: python test_cvss2.py
+    - run: python test_cvss3.py
+#     # This item has no matching transformer
+#     - email: false
+  Python_3_8:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install -e .
+    - run: cd tests
+    - run: python test_cvss2.py
+    - run: python test_cvss3.py
+#     # This item has no matching transformer
+#     - email: false
+  Python_3_9:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.9
+    - run: pip install -e .
+    - run: cd tests
+    - run: python test_cvss2.py
+    - run: python test_cvss3.py
+#     # This item has no matching transformer
+#     - email: false
