--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,101 +7,11 @@ on:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
 jobs:
-  Python_3.8:
+  test:
     runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: pip install -e .
-    - run: cd tests
-    - run: python test_cvss2.py
-    - run: python test_cvss3.py
-#     # This item has no matching transformer
-#     - email: false
-  Python_3.8:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: pip install -e .
-    - run: cd tests
-    - run: python test_cvss2.py
-    - run: python test_cvss3.py
-#     # This item has no matching transformer
-#     - email: false
-  Python_3.8:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: pip install -e .
-    - run: cd tests
-    - run: python test_cvss2.py
-    - run: python test_cvss3.py
-#     # This item has no matching transformer
-#     - email: false
-  Python_3.8:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: pip install -e .
-    - run: cd tests
-    - run: python test_cvss2.py
-    - run: python test_cvss3.py
-#     # This item has no matching transformer
-#     - email: false
-  Python_3.8:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: pip install -e .
-    - run: cd tests
-    - run: python test_cvss2.py
-    - run: python test_cvss3.py
-#     # This item has no matching transformer
-#     - email: false
-  Python_3_8:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-    - run: pip install -e .
-    - run: cd tests
-    - run: python test_cvss2.py
-    - run: python test_cvss3.py
-#     # This item has no matching transformer
-#     - email: false
-  Python_3_9:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.9
-    - run: pip install -e .
-    - run: cd tests
-    - run: python test_cvss2.py
-    - run: python test_cvss3.py
-#     # This item has no matching transformer
-#     - email: false
+    - run: pip install -r requirements.txt
+    - run: echo "from Default.settings import *" > settings.py
+    - run: "./generate.py"
