--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,38 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
     - run: pip install -r requirements.txt
-    - run: echo "from Default.settings import *" > settings.py
-    - run: "./generate.py"
+    - run: "./tests/run_tests.sh"
+    services:
+#       # This item has no matching transformer
+#       docker:
+  deploy:
+    needs:
+    - test
+    runs-on: ubuntu-22.04
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: '3.8'
+    - run: pip install -r requirements.txt
+    - run: python setup.py install_egg_info sdist bdist_wheel
+#     # This item has no matching transformer
+#     - pypi:
+#         provider: pypi
+#         username: __token__
+#         password: "$PYPI_TOKEN"
+#         'on':
+#           branch: main
+#       if: "${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}"
+    services:
+#       # This item has no matching transformer
+#       docker:
