--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,38 +8,55 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
+    runs-on: # this agent type is not supported: [[{"dist"=>"trusty"}]]
+             ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install -r requirements.txt
+    - run: python -m unittest test_asserts
+    - run: mypy asserts test_asserts.py
+    - run: flake8 asserts test_asserts.py
+    - run: python -m doctest asserts/__init__.py
+  test_2:
     runs-on: ubuntu-22.04
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: '3.8'
+        python-version: 3.8
     - run: pip install -r requirements.txt
-    - run: "./tests/run_tests.sh"
-    services:
-#       # This item has no matching transformer
-#       docker:
-  deploy:
-    needs:
-    - test
+    - run: python -m unittest test_asserts
+    - run: mypy asserts test_asserts.py
+    - run: flake8 asserts test_asserts.py
+    - run: python -m doctest asserts/__init__.py
+  test_3:
     runs-on: ubuntu-22.04
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
-        python-version: '3.8'
+        python-version: 3.8
     - run: pip install -r requirements.txt
-    - run: python setup.py install_egg_info sdist bdist_wheel
-#     # This item has no matching transformer
-#     - pypi:
-#         provider: pypi
-#         username: __token__
-#         password: "$PYPI_TOKEN"
-#         'on':
-#           branch: main
-#       if: "${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}"
-    services:
-#       # This item has no matching transformer
-#       docker:
+    - run: python -m unittest test_asserts
+    - run: mypy asserts test_asserts.py
+    - run: flake8 asserts test_asserts.py
+    - run: python -m doctest asserts/__init__.py
+  test_4:
+    runs-on: ubuntu-22.04
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+    - run: pip install -r requirements.txt
+    - run: python -m unittest test_asserts
+    - run: mypy asserts test_asserts.py
+    - run: flake8 asserts test_asserts.py
+    - run: python -m doctest asserts/__init__.py
